--- a/project/mobile/class-attendance-system/package.json
+++ b/project/mobile/class-attendance-system/package.json
@@ -23,12 +23,12 @@
     "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "^4.3.1",
     "@ionic-native/in-app-browser": "^4.3.1",
+    "@ionic-native/network": "^4.7.0",
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.3.1",
     "@ionic/storage": "2.1.3",
     "cordova-android": "^6.2.3",
     "cordova-ios": "^4.5.2",
-    "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-inappbrowser": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.0.2",
@@ -55,13 +55,6 @@
       "ios"
     ],
     "plugins": {
-      "cordova-plugin-crosswalk-webview": {
-        "XWALK_VERSION": "22+",
-        "XWALK_LITEVERSION": "xwalk_core_library_canary:17+",
-        "XWALK_COMMANDLINE": "--disable-pull-to-refresh-effect",
-        "XWALK_MODE": "embedded",
-        "XWALK_MULTIPLEAPK": "true"
-      },
       "cordova-plugin-device": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-splashscreen": {},
