--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ project/web/jeecg/target
 project/web/jeecg/target/classes/jeecg/jeecg_config.properties
 project/web/jeecg/target/classes/spring-mvc-hibernate.xml
 project/web/jeecg/target/classes/spring-mvc.xml
+project/web/jeecg/target/classes/dbconfig.properties
+project/web/jeecg/src/main/resources/dbconfig.properties
+project/web/jeecg/src/main/resources/dbconfig.properties
+project/web/jeecg/target/classes/dbconfig.properties
